--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,7 +10,7 @@ linters:
   disable-all: true
   enable:
     - testpackage
-    - paralleltest
+#    - paralleltest
     - gosimple
     - deadcode
     - errcheck
