--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,14 @@ services:
     ports:
       - ${DB_PORT}:5432
 
+  jaeger:
+    image: jaegertracing/all-in-one:1.21
+#    restart: always
+    ports:
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "16686:16686" # Jaeger UI
+
 volumes:
   database:
     driver: local
