Replace the configuration with the Viper package

--- a/.env
+++ b/.env
@@ -6,5 +6,12 @@ DB_PORT=54321
 DB_DATABASE=account
 DB_USERNAME=account
 DB_PASSWORD=secret
+DB_BATCH_SIZE=32
+DB_MAX_OPEN_CONNS=10
+DB_MAX_IDLE_CONNS=2
+DB_CONN_MAX_LIFETIME=60 # seconds
+
+KAFKA_ADDR=localhost:9092
+KAFKA_TOPIC=account-cud
 
 COMPOSE_PROJECT_NAME=${SERVICE}
