Make the size of the batch of entities to create configurable

--- a/configs/app.json
+++ b/configs/app.json
@@ -8,7 +8,8 @@
         "port": "54321",
         "database": "account",
         "user": "account",
-        "password": "secret"
+        "password": "secret",
+        "batch_size": 32
     },
     "kafka": {
         "addr": "localhost:9092",
